--- a/Software Challenge/TSP_introductory_challenge.ipynb
+++ b/Software Challenge/TSP_introductory_challenge.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Traveling Salesman Problem\n",
-    "The Traveling Salesman Problem (TSP) concerns finding the shortest path that a traveling salesman can take to go through a list of cities in the shortest time possible. This problem is represented in a graph $G =(V,E)$ with $N=|V|$. Each vertex in the graph $G$ represents a different camp, while the weights on each of the edges $(u,v)$ represent the distance between the two camps $u$ and $v$. \n",
+    "The Traveling Salesman Problem (TSP) concerns finding the shortest path that a traveling salesman can take to go through a list of cities in the shortest time possible. This problem is represented in a graph $G =(V,E)$. Each vertex in the graph $G$ represents a different camp, while the weights on each of the edges $(u,v)$ represent the distance between the two camps $u$ and $v$. \n",
     "\n",
     "This is an NP-Hard problem, and there is no known classical algorithm that is know to solve this problem in linear time. \n"
    ]
