--- a/Hardware Challenge/Hardware_Challenge.ipynb
+++ b/Hardware Challenge/Hardware_Challenge.ipynb
@@ -8,7 +8,7 @@
     "# Hardware challenge \n",
     "\n",
     "## Introduction \n",
-    "Welcome to the Hardware Challenge! I hope you had a great time learning about QAOA and AQO to solve the TSP. Now that you know throughly how the two algorithms works, it is time to device strategies to run it on real hardware. But beware! This is not an easy task. In fact, it is an open question. This challenge will put all yours skills as researchers to test. As we really want you to suceess, we will provide you a lot of information. Your main task is not just programming a simulation but to throughly understand all the challenges that such a implementation pose. You will be asked to discuss the pros and cons of differents implementations, to thoughly explain your architectural choices and to provide toy simulation examples to support your claims. Are you ready for the challenge?\n",
+    "Welcome to the Hardware Challenge! I hope you had a great time learning about QAOA and AQO to solve the TSP. Now that you know thoroughly how the two algorithms works, it is time to device strategies to run it on real hardware. But beware! This is not an easy task. In fact, it is an open question. This challenge will put all yours skills as researchers to test. As we really want you to success, we will provide you a lot of information. Your main task is not just programming a simulation but to thoroughly understand all the challenges that such a implementation pose. You will be asked to discuss the pros and cons of different implementations, to thoroughly explain your architectural choices and to provide toy simulation examples to support your claims. Are you ready for the challenge?\n",
     "\n",
     "During the challenge you will encounter severals questions. We don't expect you to fully answer all of then but rather we want you to understand every challenge that a physical implementation of TSP entails. At the end of the tutorial, you will find all the things we expect you to implement."
    ]
@@ -61,11 +61,11 @@
    "source": [
     "## From Circuit Hamiltonian to Pauli Hamiltonian \n",
     "\n",
-    "During this tutorial we reproduce, for educational porpuses, the examples implemented in [2] and [1]. To run the quantum algorithm we use superconducting qubits. Superconducting circuits are one of the most popular hardware platforms to implementent these kind of computations. Their fundamental elements are Josephson junctions made of a superconducting material. In the superconducting material, at low enough temperatures, Cooper pairs (two electrons bounded together) are formed. The Cooper pairs act as bosons whose condesated macroscopic wave function retains its quantum behaviour. The Josephson junction is a barrier through which the Cooper pairs can tunnel. This tunneling can be controlled through extenal parameters. In the lumped-element circuit approximation, the Josephson junction acts as a non-linear inductor with a capacitance. During this challenge we will focus on Capacitevely Shunted Flux Qubits (CSFQ) and couplers.\n",
+    "During this tutorial we reproduce, for educational purposes, the examples implemented in [2] and [1]. To run the quantum algorithm we use superconducting qubits. Superconducting circuits are one of the most popular hardware platforms to implement these kind of computations. Their fundamental elements are Josephson junctions made of a superconducting material. In the superconducting material, at low enough temperatures, Cooper pairs (two electrons bounded together) are formed. The Cooper pairs act as bosons whose condensate macroscopic wave function retains its quantum behavior. The Josephson junction is a barrier through which the Cooper pairs can tunnel. This tunneling can be controlled through external parameters. In the lumped-element circuit approximation, the Josephson junction acts as a non-linear inductor with a capacitance. During this challenge we will focus on Capacitively Shunted Flux Qubits (CSFQ) and couplers.\n",
     "\n",
     "![CSFQ [1]](./images/CSFQ.png)\n",
     "\n",
-    "**Question(Research): Why do you thing these are appropriate elements to perform the anneling? Can you think of alternatives? Idea: support your answer by doing some simulation wiht scqubits.**\n",
+    "**Question(Research): Why do you thing these are appropriate elements to perform the annealing? Can you think of alternatives? Idea: support your answer by doing some simulation with scqubits.**\n",
     "\n",
     "In [1] you have all the information on how to obtain the Hamiltonian for the two circuit elements.\n",
     "\n",
@@ -103,7 +103,7 @@
     "H_{eff} = \\begin{pmatrix} \\bra{0} H_{eff} \\ket{0} & \\bra{0} H_{eff} \\ket{1} \\\\ \\bra{1} H_{eff} \\ket{0} & \\bra{1} H_{eff} \\ket{1} \\end{pmatrix} = V_p^{\\dagger}\\begin{pmatrix} E_g & 0 \\\\ 0 & E_e \\end{pmatrix} V_p.\n",
     "$$\n",
     "\n",
-    "We extract the Pauli coefficients by rewritting the effective Hamiltonian as \n",
+    "We extract the Pauli coefficients by rewriting the effective Hamiltonian as \n",
     "\n",
     "$$\n",
     "H_{eff} = \\alpha_x \\sigma^x + \\alpha_y \\sigma^y + \\alpha_z \\sigma^z + \\alpha_I \\sigma^I,\n",
@@ -119,7 +119,7 @@
     "\n",
     "where $h^x$ and $h^z$ are Pauli coefficients for given qubit circuit biases of $\\varphi_x$ and $\\varphi_z$. \n",
     "\n",
-    "Now, we consider the case of $N$ flux qubits that are coupled to each other via $M$ tunable coupler elements, and each circuit element has a given set of external biases. The Hamiltonian for such a sytem consisting of CSFQs and tunable couplers can be derived. First, we separate the qubit, coupler, and interactions terms as\n",
+    "Now, we consider the case of $N$ flux qubits that are coupled to each other via $M$ tunable coupler elements, and each circuit element has a given set of external biases. The Hamiltonian for such a system consisting of CSFQs and tunable couplers can be derived. First, we separate the qubit, coupler, and interactions terms as\n",
     "\n",
     "$$\n",
     "\\begin{align}H^{tot} &= H_0 + H_{int}, \\\\ H_0 &= \\sum_{i=1}^N H_i^q + \\sum_{i=1}^M H_i^{cpl}, \\end{align}\n",
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the list of elements, we have to set the mutuals between them to construct the mutual matrix `m_mat` between them. For that, if `elements[i]` and `elements[j]` circuit elements are coupled via a mutual inductance of `m`, then for the mtual matrix we should have `m_mat[i, j] = m_mat[j, i] = -m`. Note that the size of (both of axis of the) mutual matrix is the same as the size of the `elements`. For a chain configuration we have:"
+    "After the list of elements, we have to set the mutuals between them to construct the mutual matrix `m_mat` between them. For that, if `elements[i]` and `elements[j]` circuit elements are coupled via a mutual inductance of `m`, then for the mutual matrix we should have `m_mat[i, j] = m_mat[j, i] = -m`. Note that the size of (both of axis of the) mutual matrix is the same as the size of the `elements`. For a chain configuration we have:"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To obtain the schedules using the circuit biases, we have to construct a dictionary of the circuit fluxes. This dictionary will have a key named `points` which simply is the number of points used for the flux schedules. For circuit element i(`elements[i]`), the x and z biases should have keys `phix_i` and `phiz_i` respectively. This keys are assigned to an array of flux poinsts. The input for circuit biases are phase, i.e. $\\varphi = \\frac{\\Psi}{\\Psi_0}2 \\pi$ wehre $\\varphi$ is the phase and $\\Psi$ is the magnetic flux.\n"
+    "To obtain the schedules using the circuit biases, we have to construct a dictionary of the circuit fluxes. This dictionary will have a key named `points` which simply is the number of points used for the flux schedules. For circuit element i(`elements[i]`), the x and z biases should have keys `phix_i` and `phiz_i` respectively. This keys are assigned to an array of flux points. The input for circuit biases are phase, i.e. $\\varphi = \\frac{\\Psi}{\\Psi_0}2 \\pi$ wehre $\\varphi$ is the phase and $\\Psi$ is the magnetic flux.\n"
    ]
   },
   {
@@ -630,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we show the results for the Ising coefficients calcualte via these two methods, where the solid lines are calculated using full SW, while dashed lines are calculated using the pair-wise SW method."
+    "Below we show the results for the Ising coefficients calculate via these two methods, where the solid lines are calculated using full SW, while dashed lines are calculated using the pair-wise SW method."
    ]
   },
   {
@@ -707,9 +707,9 @@
     "\n",
     "where $\\{\\varphi_{x,k}, \\varphi_{z,k}\\}$ indicates the set of all circuit biases, the summation is over all the qubits and all the different coefficients $S_i \\in \\{h_k^x, h_k^z, J_{kl}\\}$, and $\\tilde{S}_i$ is a similar notation for our desired Pauli coefficients, for which we wish to find appropriate circuit biases. This cost function is then minimized in an optimization routine to find the desired circuit biases. Note that although we construct a convex cost function, the optimization problem is not convex in general. \n",
     "\n",
-    "To solve this optimization problem we apply a few constrains on the physics of the circuit which allow us to narrow the search region. There are three main physical constraints that we can impose in order to simplify the optimization task. The first is to note that the potential of the flux qubits and couplers is periodic with respect to circuit biases, and one needs to choose an *annealing cell* that fixes the bias ranges such that they belong to a chosen periodicity. The second is that the $z$- bias of qubit circuits cannot be tuned beyond a certain value; doing so will break the qubit definition for these circuits. Therefore one needs to place hard constraints on the qubit $z$-biases, which significantly narrows the search region. The third is that the coupler z-biases should all remain fixed at the coupler degeneracy point and do not need to be optimized. Tuning the coupler z-bias away from its degeneracy throuws magnetic flux onto its neighboring qubits, which complicaates the experimental control of the circuit. It amounts to introducing a correlation between the qubits’ and the couplers’ z-biases (this also makes numerical optimization more challenging). Additionally, keeping the couplers at their degeneracy improves their coherence (by making them first-order insensitive to frequency fluctuations) and therefore improves the performance of the multi-qubit system, and will not adversely affect the achievable interaction strength between the qubits.\n",
+    "To solve this optimization problem we apply a few constrains on the physics of the circuit which allow us to narrow the search region. There are three main physical constraints that we can impose in order to simplify the optimization task. The first is to note that the potential of the flux qubits and couplers is periodic with respect to circuit biases, and one needs to choose an *annealing cell* that fixes the bias ranges such that they belong to a chosen periodicity. The second is that the $z$- bias of qubit circuits cannot be tuned beyond a certain value; doing so will break the qubit definition for these circuits. Therefore one needs to place hard constraints on the qubit $z$-biases, which significantly narrows the search region. The third is that the coupler z-biases should all remain fixed at the coupler degeneracy point and do not need to be optimized. Tuning the coupler z-bias away from its degeneracy throuws magnetic flux onto its neighboring qubits, which complicates the experimental control of the circuit. It amounts to introducing a correlation between the qubits’ and the couplers’ z-biases (this also makes numerical optimization more challenging). Additionally, keeping the couplers at their degeneracy improves their coherence (by making them first-order insensitive to frequency fluctuations) and therefore improves the performance of the multi-qubit system, and will not adversely affect the achievable interaction strength between the qubits.\n",
     "\n",
-    "There is a large variety of optimization algorithms and numerical packages that can be utilized for this problem depending on preference and performance. However, the computational cost of the optimizatioin problem scales exponentially with the number of flux qubits and couplers due to use of the SW method for cost function calculations. Additionally, the cost function must be calculated multiple times for the optimization algorithm to converge to a minimum, which further increases the computational cost, making this method viable only for small circuits.  \n",
+    "There is a large variety of optimization algorithms and numerical packages that can be utilized for this problem depending on preference and performance. However, the computational cost of the optimization problem scales exponentially with the number of flux qubits and couplers due to use of the SW method for cost function calculations. Additionally, the cost function must be calculated multiple times for the optimization algorithm to converge to a minimum, which further increases the computational cost, making this method viable only for small circuits.  \n",
     "\n",
     "Considering the unfavorable computational scaling of the method and motivated by the pairwise SW method here we provide an approximate method for finding circuit fluxes that yields desired Pauli schedules. First, we use a numerical approach similar to the previous one to find the circuit biases for isolated but loaded qubits. With the qubit biases in hand, we then turn on the couplers and calculate the coupling strengths using the pairwise-SW method until we reach our desired coupling strength, for which we save the coupler bias that yielded the desired strength.\n",
     "\n",
@@ -890,15 +890,15 @@
     "\n",
     "1. Find a totally non-trivial optimization problem in [11] that you can implement with 3-5 qubits. \n",
     "\n",
-    "2. Desing a layout for the circuit.\n",
+    "2. Design a layout for the circuit.\n",
     "\n",
     "3. Simulate the spectrum of the circuit using CAS.\n",
     "\n",
-    "4. Propose an Ising annealing schedule. In [1] you can find more information of appropiated forms of the schedules\n",
+    "4. Propose an Ising annealing schedule. In [1] you can find more information about the appropriate forms of schedules\n",
     "\n",
     "5. Find the corresponding flux schedule and propose ways to check its correctness. \n",
     "\n",
-    "6. Once you have completed all these steps, propose ways to scale these procedures to more qubits. Some tecniques for finding the gap along the annealing process can be found in [7], [8], [9] and [10]. Can you implement a simulation from one of these papers? Research and propose better techniques to find the flux schedule for a given Ising schedule with a greater amount of qubits.  "
+    "6. Once you have completed all these steps, propose ways to scale these procedures to more qubits. Some techniques for finding the gap along the annealing process can be found in [7], [8], [9] and [10]. Can you implement a simulation from one of these papers? Research and propose better techniques to find the flux schedule for a given Ising schedule with a greater amount of qubits.  "
    ]
   },
   {
