--- a/Hardware Challenge/Hardware_Challenge.ipynb
+++ b/Hardware Challenge/Hardware_Challenge.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "**Remark: take into account this last part when designing the circuit layout**\n",
     "\n",
-    "**Question(research): can you perform some of the quantitative analysis of pairwise-SW approximation errors and their trend with system size, connectivity, type of schedule, and interaction size.**\n",
+    "**Question(research): Can you perform some of the quantitative analysis of pairwise-SW approximation errors and their trend with system size, connectivity, type of schedule, and interaction size?**\n",
     "\n",
     "Now that we know the theory it is time to do some coding. \n",
     "\n"
