updating image relative path

--- a/Hardware Challenge/Hardware_Challenge.ipynb
+++ b/Hardware Challenge/Hardware_Challenge.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "During this tutorial we reproduce, for educational purposes, the examples implemented in [2] and [1]. To run the quantum algorithm we use superconducting qubits. Superconducting circuits are one of the most popular hardware platforms to implement these kind of computations. Their fundamental elements are Josephson junctions made of a superconducting material. In the superconducting material, at low enough temperatures, Cooper pairs (two electrons bounded together) are formed. The Cooper pairs act as bosons whose condensate macroscopic wave function retains its quantum behavior. The Josephson junction is a barrier through which the Cooper pairs can tunnel. This tunneling can be controlled through external parameters. In the lumped-element circuit approximation, the Josephson junction acts as a non-linear inductor with a capacitance. During this challenge we will focus on Capacitively Shunted Flux Qubits (CSFQ) and couplers.\n",
     "\n",
-    "![CSFQ [1]](./images/CSFQ.png)\n",
+    "![CSFQ [1]](Hardware Challenge/images/CSFQ.png)\n",
     "\n",
     "**Question(Research): Why do you thing these are appropriate elements to perform the annealing? Can you think of alternatives? Idea: support your answer by doing some simulation with scqubits.**\n",
     "\n",
