--- a/Hardware Challenge/Hardware_Challenge.ipynb
+++ b/Hardware Challenge/Hardware_Challenge.ipynb
@@ -8,9 +8,9 @@
     "# Hardware challenge \n",
     "\n",
     "## Introduction \n",
-    "Welcome to the Hardware Challenge! I hope you had a great time learning about QAOA and AQO to solve the TSP. Now that you know thoroughly how the two algorithms works, it is time to device strategies to run it on real hardware. But beware! This is not an easy task. In fact, it is an open question. This challenge will put all yours skills as researchers to test. As we really want you to success, we will provide you a lot of information. Your main task is not just programming a simulation but to thoroughly understand all the challenges that such a implementation pose. You will be asked to discuss the pros and cons of different implementations, to thoroughly explain your architectural choices and to provide toy simulation examples to support your claims. Are you ready for the challenge?\n",
+    "Welcome to the Hardware Challenge! I hope you had a great time learning about QAOA and AQO to solve the TSP. Now that you know thoroughly how the two algorithms work, it is time to device strategies to run it on real hardware. But beware! This is not an easy task. In fact, it is an open question. This challenge will put all yours skills as researchers to test. As we really want you to success, we will provide you with a lot of information. Your main task is not just programming a simulation but to thoroughly understand all the challenges that such a implementation pose. You will be asked to discuss the pros and cons of different implementations, to thoroughly explain your architectural choices and to provide toy simulation examples to support your claims. Are you ready for the challenge?\n",
     "\n",
-    "During the challenge you will encounter severals questions. We don't expect you to fully answer all of then but rather we want you to understand every challenge that a physical implementation of TSP entails. At the end of the tutorial, you will find all the things we expect you to implement."
+    "During the challenge you will encounter several questions. We don't expect you to fully answer all of them but rather we want you to understand every challenge that a physical implementation of TSP entails. At the end of the tutorial, you will find all the things we expect you to implement."
    ]
   },
   {
@@ -28,9 +28,9 @@
     "```\n",
     "To activate the environment run the following command in the terminal: `conda activate hackathon`. \n",
     "\n",
-    "Alternatively, you can skip this step just make sure you have python 3.9 or higher installed on your machine. \n",
+    "Alternatively, you can skip this step but just make sure you have python 3.9 or higher installed on your machine. \n",
     "\n",
-    "Then to install the CAS library using the following steps:\n",
+    "Then install the CAS library using the following steps:\n",
     "\n",
     "1. To install CAS[2] you have to clone the repository in your system. \n",
     "\n",
@@ -65,17 +65,17 @@
     "\n",
     "![CSFQ [1]](./images/CSFQ.png)\n",
     "\n",
-    "**Question(Research): Why do you thing these are appropriate elements to perform the annealing? Can you think of alternatives? Idea: support your answer by doing some simulation with scqubits.**\n",
+    "**Optional Question(Research-level): Why do you thing these are appropriate elements to perform the annealing? Can you think of alternatives? Idea: support your answer by doing some simulation with scqubits.**\n",
     "\n",
     "In [1] you have all the information on how to obtain the Hamiltonian for the two circuit elements.\n",
     "\n",
-    "**Question(Research): Do you understand how this is done? Can you derive the hamiltonian of another element that you have proposed in the previous question?**\n",
+    "**Optional Question(Research-level): Do you understand how this is done? Can you derive the hamiltonian of another element that you have proposed in the previous question?**\n",
     "\n",
     "For annealing with flux qubits we can control the qubit gap and its persistent current. This persistent current corresponds to a tiltable double-well potential, where the states in each well are associated with persistent currents that flow in opposite directions. The magnitude of the persistent current (PC) is associated with the strength of the $\\sigma^z$ term in the Hamiltonian, and the tunneling amplitude between the two wells is assocated with the strength of the $\\sigma^x$ term in the Hamiltonian. In a typical anneal, flux qubits are initialized with a low barrier that yields large tunneling between the wells (transverse field), and towards the end of the anneal the barrier is raised and the double-well is tilted, which supresses the tunneling and give the qubit a net persistent current (longitudinal field).\n",
     "\n",
     "![Transverse Field Ising Hamiltonian [13]](./images/Transverse-Field-Ising-Hamiltonian.png)\n",
     "\n",
-    "The flux qubit circuit is controlled via two flux biases denoted $\\varphi_x$ and $\\varphi_z$. For a given set of biases, we first find the two lowest eigenstates of the multi-level circuit Hamiltonian of the flux qubit, which we use to build the (two-level) qubit model. In the case of gate-based quantum computation using transmons, the low-energy eigenstates themselves are used as the computational basis, since the dispersive readout is an eigenstate measurement in the energy eigenbasis. However, in QA we typically perform a persistent current measurement at the end of each anneal. \n",
+    "The flux qubit circuit is controlled via two flux biases denoted $\\varphi_x$ and $\\varphi_z$. For a given set of biases, we first find the two lowest eigenstates of the multi-level circuit Hamiltonian of the flux qubit, which we use to build the (two-level) qubit model. In the case of gate-based quantum computation using transmons, the low-energy eigenstates themselves are used as the computational basis, since the dispersive readout is a measurement in the energy eigenbasis. However, in QA we typically perform a persistent current measurement at the end of each anneal. \n",
     "\n",
     "![Qubit-Control [13]](./images/Qubit-Control.png)\n",
     "\n",
@@ -89,7 +89,7 @@
     "$$\n",
     "where $\\{\\ket{g},\\ket{e}\\}$ are the ground and excited eigenstates of the circuit Hamiltonian of the flux qubit with eigenenergies $\\{E_g, E_e\\}$ respectively.\n",
     "\n",
-    "Note that for flux qubits where we associate the qubit states to circulating currents flowing in opposite directions, we require the eigenvalues of $I_p^{low}$ to have opposite signs. If we tilt the qubit potential beyond a certain point, then the first two eigenstates of the circuit will both be localized in the same well and the eigenvalues of $I_{p}^{low}$ will have the same sign. This puts an upper bound on the tilt-bias $|\\varphi_z|$, beyond which the flux circuit cannot implement a qubit. \n",
+    "Note that for flux qubits where we associate the qubit states to circulating currents flowing in opposite directions, we require the eigenvalues of $I_p^{low}$ to have opposite signs. If we tilt the qubit potential beyond a certain point, then the first two eigenstates of the circuit will both be localized in the same well and the eigenvalues of $I_{p}^{low}$ will have the same sign. This puts an upper bound on the tilt-bias $|\\varphi_z|$, beyond which the flux circuit cannot be implemented using annealing. \n",
     "\n",
     "Let $V_p$ be the unitary matrix (in the $\\{\\ket{g}, \\ket{e}\\}$ basis) that diagonalizes $I_p^{low}$ and has the eigenstates of $I_{p}^{low}$ as its columns. The computational basis $\\{\\ket{0},\\ket{1}\\}$ is then defined by the eigenstates of the $I_p^{low}$ operator, and in a slight abuse of notation we express them as:e\n",
     "\n",
@@ -125,7 +125,7 @@
     "\\begin{align}H^{tot} &= H_0 + H_{int}, \\\\ H_0 &= \\sum_{i=1}^N H_i^q + \\sum_{i=1}^M H_i^{cpl}, \\end{align}\n",
     "$$\n",
     "\n",
-    "where $H_i^q$ is the loaded Hamiltonian of the $i^{th}$ qubit, $H_{i}^{cpl}$ is the loaded Hamiltonian of the $i^{th}$ coupler, $H_0$  is the non-interacting part of the Hamiltonian, and $H_{int}$ includes all the interaction terms between these elements. We want our qubit subspace to be spanned by the two lowest eigenstates of each non-interacting qubit circuit, and since the couplers are designed to adiabatically follow the qubits and remain in their ground state, the qubit subspace will also be spanned by the ground state of each non-interacting coupler circuit. However, the interaction term $H_{int}$ mixes the states inside the qubit subspaces with the higher excited states outside of it. Therefore, we employ the SW transformation to find an effective Hamiltonian that acts on the qubit subspace. This essentially block-diagonalizes the total circuit Hamiltonian with respect to the qubit subspace, taking into account the effect of the interaction on the low-energy subspace while preserving the low-energy spectrum of the circuit.\n",
+    "where $H_i^q$ is the loaded Hamiltonian of the $i^{th}$ qubit, $H_{i}^{cpl}$ is the loaded Hamiltonian of the $i^{th}$ coupler, $H_0$  is the non-interacting part of the Hamiltonian, and $H_{int}$ includes all the interaction terms between these elements. We want our qubit subspace to be spanned by the two lowest eigenstates of each non-interacting qubit circuit, and since the couplers are designed to adiabatically follow the qubits and remain in their ground state, the qubit subspace will also be spanned by the ground state of each non-interacting coupler circuit. However, the interaction term $H_{int}$ mixes the states inside the qubit subspaces with the higher excited states outside of it. Therefore, we employ the Schrieffer-Wolff (SW) transformation to find an effective Hamiltonian that acts on the qubit subspace. This essentially block-diagonalizes the total circuit Hamiltonian with respect to the qubit subspace, taking into account the effect of the interaction on the low-energy subspace while preserving the low-energy spectrum of the circuit.\n",
     "\n",
     "Formally, let us define the projector onto the low-energy qubit subspace of the interacting and non-interacting circuits as \n",
     "\n",
@@ -153,15 +153,15 @@
     "\n",
     "where $S_{\\vec{r}} = \\sigma^{r_1} \\otimes \\sigma^{r_2} \\otimes \\dots \\otimes \\sigma^{r_N} \\otimes P_c$  consists of single qubit Pauli operators of the $i^{th}$ qubit $\\sigma^{r_i}$, which is calculated for (loaded) non-interacting qubit circuits. The operator $P_c = \\ket{g_{c,1}}\\bra{g_{c,2}}\\otimes \\cdots \\otimes \\ket{g_{c,M}}\\bra{g_{c,M}}$ consists of the projectors onto the ground state of the $i^{th}$ (loaded) non-interacting coupler circuit $\\ket{g_{c,i}}\\bra{g_{c,i}}$.\n",
     "\n",
-    "But this not scale efficiently. Let assume that we have a circuit of $N$ qubits and $M$ couplers, each with a truncation (i.e., Hilbert space dimension) of $q$  and $c$ respectively. The joint system then has a Hilbert space dimension of $q^Nc^M,$ which grows exponentially with the number of qubits and couplers. Therefore, the computational cost of calculating the full-SW Pauli coefficients, which requires diagonalizing a matrix of dimension $q^Nc^M$, scales exponentially with the number of circuit elements, and can only be calculated for a handful of qubits and couplers.\n",
+    "But this does not scale efficiently. Let us assume that we have a circuit of $N$ qubits and $M$ couplers, each with a truncation (i.e., Hilbert space dimension) of $q$  and $c$ respectively. The joint system then has a Hilbert space dimension of $q^Nc^M,$ which grows exponentially with the number of qubits and couplers. Therefore, the computational cost of calculating the full-SW Pauli coefficients, which requires diagonalizing a matrix of dimension $q^Nc^M$, scales exponentially with the number of circuit elements, and can only be calculated for a handful of qubits and couplers.\n",
     "\n",
-    "To target larger system sizes, we now propose an approximation scheme where the system is divided into pairs of flux qubits that interact via a tunable coupler circuit. For each pair, the single qubit Pauli coefficients are calculated for non-interacting but loaded qubit circuits, and then the coefficients relating their interaction (two-qubit Pauli terms) are calculated bia SW between those pairs only, neglecting other parts of the circuit. Let us consider a circuit of $N$ qubits and $M$  couplers, each with a truncation of $q$ and $c$ respectively. Using this approximate method, the cost of finding Pauli coefficients of single qubits if $Nq$ (each qubit Hamiltonian is diagonalized separately) which is linear in the number of qubits, and the cost of performing the full SW between pairs is $M(q^2c)$ (assuming each coupler interacts with two qubits) which is also linear in the number of couplers. We call this method pairwise-SW. It gives acceptable accuracy for the schedules while scaling linearly with the number of qubits and couplers in contrast to the exponential scaling of the full-SW. Instead of using the pairwise-SW method to calculate the coupling strength, one ca use the Born-Oppenheimer method that uses a different approximation that scales linearly with the number of qubits and couplers as well but is slower by a prefactor. \n",
+    "To target larger system sizes, we now propose an approximation scheme where the system is divided into pairs of flux qubits that interact via a tunable coupler circuit. For each pair, the single qubit Pauli coefficients are calculated for non-interacting but loaded qubit circuits, and then the coefficients relating their interaction (two-qubit Pauli terms) are calculated via SW between those pairs only, neglecting other parts of the circuit. Let us consider a circuit of $N$ qubits and $M$  couplers, each with a truncation of $q$ and $c$ respectively. Using this approximate method, the cost of finding Pauli coefficients of single qubits if $Nq$ (each qubit Hamiltonian is diagonalized separately) which is linear in the number of qubits, and the cost of performing the full SW between pairs is $M(q^2c)$ (assuming each coupler interacts with two qubits) which is also linear in the number of couplers. We call this method pairwise-SW. It gives acceptable accuracy for the schedules while scaling linearly with the number of qubits and couplers in contrast to the exponential scaling of the full-SW. Instead of using the pairwise-SW method to calculate the coupling strength, one can use the Born-Oppenheimer method that uses a different approximation that scales linearly with the number of qubits and couplers as well but is slower by a prefactor. \n",
     "\n",
-    "As this pairwise-SW assumes local interactions such that by construction the effect of next nearest neighbor is neglected. Therefore it cannot be applied to systems with long-range or multi-body interactions. A quantitative analysis of pairwise-SW approximations.\n",
+    "As this Pairwise-SW assumes local interactions such that by construction the effect of next nearest neighbor is neglected, therefore it cannot be applied to systems with long-range or multi-body interactions.\n",
     "\n",
     "**Remark: take into account this last part when designing the circuit layout**\n",
     "\n",
-    "**Question(research): can you perform some of the quantitative analysis of pairwise-SW approximation errors and their trend with system size, connectivity, type of schedule, and interaction size.**\n",
+    "**Optional Question(Research-level): can you perform some of the quantitative analysis of pairwise-SW approximation errors and their trend with system size, connectivity, type of schedule, and interaction size?**\n",
     "\n",
     "Now that we know the theory it is time to do some coding. \n",
     "\n"
