--- a/Hardware Challenge/Hardware_Challenge.ipynb
+++ b/Hardware Challenge/Hardware_Challenge.ipynb
@@ -89,7 +89,7 @@
     "$$\n",
     "where $\\{\\ket{g},\\ket{e}\\}$ are the ground and excited eigenstates of the circuit Hamiltonian of the flux qubit with eigenenergies $\\{E_g, E_e\\}$ respectively.\n",
     "\n",
-    "Note that for flux qubits where we associate the qubit states to circulating currents flowing in opposite directions, we require the eigenvalues of $I_p^{low}$ to have opposite signs. If we tilt the qubit potential beyond a certain point, then the first two eigenstates of the circuit will both be localized in the same well and the eigenvalues of $I_{p}^{low}$ will have the same sign. This puts an upper bound on the tilt-bias $|\\varphi_z|$, beyond which the flux circuit cannot be implemented using annealing. \n",
+    "Note that for in order to associate the flux qubit states to circulating currents flowing in opposite directions, we require the eigenvalues of $Ip^{low}$ to have opposite signs. If we tilt the qubit potential beyond a certain point, then the first two eigenstates of the circuit will both be localized in the same well and the eigenvalues of $I_{p}^{low}$ will have the same sign. This puts an upper bound on the tilt-bias $|\\varphi_z|$, beyond which the flux circuit cannot be implemented using annealing. \n",
     "\n",
     "Let $V_p$ be the unitary matrix (in the $\\{\\ket{g}, \\ket{e}\\}$ basis) that diagonalizes $I_p^{low}$ and has the eigenstates of $I_{p}^{low}$ as its columns. The computational basis $\\{\\ket{0},\\ket{1}\\}$ is then defined by the eigenstates of the $I_p^{low}$ operator, and in a slight abuse of notation we express them as:e\n",
     "\n",
@@ -151,7 +151,7 @@
     "h_{\\vec{r}} = \\frac{1}{2^N} Tr(H_q S_{\\vec{r}}),\n",
     "$$\n",
     "\n",
-    "where $S_{\\vec{r}} = \\sigma^{r_1} \\otimes \\sigma^{r_2} \\otimes \\dots \\otimes \\sigma^{r_N} \\otimes P_c$  consists of single qubit Pauli operators of the $i^{th}$ qubit $\\sigma^{r_i}$, which is calculated for (loaded) non-interacting qubit circuits. The operator $P_c = \\ket{g_{c,1}}\\bra{g_{c,2}}\\otimes \\cdots \\otimes \\ket{g_{c,M}}\\bra{g_{c,M}}$ consists of the projectors onto the ground state of the $i^{th}$ (loaded) non-interacting coupler circuit $\\ket{g_{c,i}}\\bra{g_{c,i}}$.\n",
+    "where $S_{\\vec{r}} = \\sigma^{r_1} \\otimes \\sigma^{r_2} \\otimes \\dots \\otimes \\sigma^{r_N} \\otimes P_c$  consists of single qubit Pauli operators of the $i^{th}$ qubit $\\sigma^{r_i}$, which is calculated for non-interacting qubit circuits. The operator $P_c = \\ket{g_{c,1}}\\bra{g_{c,2}}\\otimes \\cdots \\otimes \\ket{g_{c,M}}\\bra{g_{c,M}}$ consists of the projectors onto the ground state of the $i^{th}$ (loaded) non-interacting coupler circuit $\\ket{g_{c,i}}\\bra{g_{c,i}}$.\n",
     "\n",
     "But this does not scale efficiently. Let us assume that we have a circuit of $N$ qubits and $M$ couplers, each with a truncation (i.e., Hilbert space dimension) of $q$  and $c$ respectively. The joint system then has a Hilbert space dimension of $q^Nc^M,$ which grows exponentially with the number of qubits and couplers. Therefore, the computational cost of calculating the full-SW Pauli coefficients, which requires diagonalizing a matrix of dimension $q^Nc^M$, scales exponentially with the number of circuit elements, and can only be calculated for a handful of qubits and couplers.\n",
     "\n",
